--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-big-schedule",
-  "version": "4.4.5",
+  "name": "react-big-schedule-fairshare",
+  "version": "4.4.6",
   "description": "React Big Schedule  is a powerful and intuitive scheduler and resource planning solution built with React. Seamlessly integrate this modern browser-compatible component into your applications to effectively manage time, appointments, and resources. With drag-and-drop functionality, interactive UI, and granular views, react-big-schedule empowers users to effortlessly schedule and allocate resources with precision. Enhance productivity and streamline your workflow with this React-based solution, designed to optimize time management and simplify calendar-based operations. Perfect for applications requiring advanced scheduling capabilities, react-big-schedule offers a seamless and intuitive experience for managing appointments, resource allocation, and time slots. Unlock the potential of your React projects with react-big-schedule and revolutionize the way you handle scheduling and resource planning. It is the updated version of react-big-scheduler",
   "keywords": [
     "react-big-schedule",
@@ -33,7 +33,7 @@
     "antd"
   ],
   "license": "MIT",
-  "author": "Ansul Agrawal (https://github.com/ansulagrawal)",
+  "author": "Atharva Chakankar (https://github.com/atha10)",
   "files": [
     "dist",
     "README.md",
@@ -43,10 +43,10 @@
   "homepage": "https://react-big-schedule.vercel.app",
   "repository": {
     "type": "git",
-    "url": "https://github.com/react-scheduler/react-big-schedule"
+    "url": "https://github.com/atha10/react-big-schedule"
   },
   "bugs": {
-    "url": "https://github.com/react-scheduler/react-big-schedule/issues"
+    "url": "https://github.com/atha10/react-big-schedule/issues"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
